--- a/stylesheets/components/_artifact--monster.scss
+++ b/stylesheets/components/_artifact--monster.scss
@@ -778,7 +778,7 @@
 					width: calc(100% - 4.5rem);
 					cursor: pointer;
 
-					&:hover i {
+					&:hover .item__name i {
 						color: var(--color-secondary-base);
 					}
 
